# idf-leaks

./: .gitignore  Cargo.toml  IDF-Leaks.7z.sha256sum  Makefile  README.md  install_dependencies.sh  pdf_ocr_extractor.py  query_database.py  requirements.txt  shell.nix
src/: cli.rs  database.rs  extractor.rs  main.rs  ocr.rs  pdf.rs  progress.rs  query.rs
